Do the same for Integer
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@24829 67a373e5-eb02-0410-a15c-ee090a768436