@@ -38,7 +38,7 @@ public class FailureCodeTracker {
 			int num = Integer.parseInt(name);
 			int count = Integer.parseInt(f.get("Count"));
 			if(count < 0) throw new IllegalArgumentException("Count < 0");
-			map.put(new Integer(num), new Item(count));
+			map.put(Integer.valueOf(num), new Item(count));
 			total += count;
 		}
 	}
